@@ -1,3 +1,9 @@
+2013-11-21 Max Baak <mbaak@cern.ch>
+	M       src/toy_utils.h
+	M       src/toy_utils.cxx
+	* by default, when merging hypo tests, reject grid points with failed
+	pre-fits.
+
 2013-11-21 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* examples/: added an example pull plot script, with demo output
 
